removed career cards that isnt being worked on yet and added link icon to the career cards in progress.

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -362,6 +362,13 @@ body::-webkit-scrollbar-thumb {
   background-color: var(--main-bgc);
   padding: 10px;
   border-radius: 10px;
+  display: flex;
+  align-items: center;
+}
+
+.careers__card-link.disabled > .coming-soon > span > .material-icons-outlined {
+  font-size: 0.8rem;
+  margin-left: 5px;
 }
 
 /** aside (open source) */
