--- a/src/css/main.css
+++ b/src/css/main.css
@@ -562,13 +562,13 @@ footer .copyright span {
 /* badges for some of the links */
 .resource-link-badge {
   border: 1px solid rgba(12, 37, 51, 0.904);
-  padding: 5px 10px;
+  padding: 2px 5px;
   font-size: 50%;
   font-weight: bold;
   background-color: rgba(21, 68, 95, 0.651);
   border-radius: 5px;
   margin-left: 5px;
-  margin-top: 10px;
+  /* margin-top: 10px; */
 }
 
 /* sub sections in the resource  card */
