modefied copyright get current year javascript code.

--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -53,7 +53,7 @@ footer {
       display: flex;
       align-items: center;
       .icons {
-        margin-right: 3px;
+        margin: 0 3px;
       }
     }
   }
