added contributes page.

--- a/src/index.scss
+++ b/src/index.scss
@@ -12,6 +12,7 @@ $nav-height: 60px;
 
 // border colors
 $pink: hsl(350, 89%, 74%);
+$pink: hsl(350, 89%, 74%);
 $green: hsl(120, 50%, 50%);
 $red: hsl(0, 50%, 50%);
 $orange: hsl(39, 100%, 50%);
