centered copyright sentnce.

--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -52,6 +52,7 @@ footer {
     small {
       display: flex;
       align-items: center;
+      justify-content: center;
       .icons {
         margin: 0 3px;
       }
