--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,5 @@
 //* variables
+$main-bgc: hsl(209, 41%, 22%);
 $main-color: hsl(212, 28%, 86%);
 $pink: hsl(350, 89%, 74%);
 
@@ -14,7 +15,7 @@ $pink: hsl(350, 89%, 74%);
 
   //* all links in paragraphs
   .paragraph-links {
-    color: pink;
+    color: $pink;
   }
 
   //* all links in descriptions of the sections in the roadmaps and careers page
@@ -38,6 +39,19 @@ body::-webkit-scrollbar-track {
 
 body::-webkit-scrollbar-thumb {
   background-color: $main-color;
+}
+
+//* side menu scrollbar
+.sidebar-links::-webkit-scrollbar {
+  width: 5px;
+}
+
+.sidebar-links::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px white;
+}
+
+.sidebar-links::-webkit-scrollbar-thumb {
+  background-color: $main-bgc;
 }
 
 //! Sections and Subsections paddings media query (Start)
