--- a/src/components/SideBar/SideBar.scss
+++ b/src/components/SideBar/SideBar.scss
@@ -19,9 +19,15 @@ $main-color: hsl(212, 28%, 86%);
       display: flex;
       justify-content: center;
       align-items: center;
+      font-weight: 700;
     }
     .icons {
       margin-left: 5px;
+      transform: rotate(0deg);
+      transition: transform 0.5s ease-in-out;
+    }
+    .active {
+      transform: rotate(-180deg);
     }
   }
 }
