--- a/styles/ContributeCTA.module.scss
+++ b/styles/ContributeCTA.module.scss
@@ -1,4 +1,8 @@
 //* aside (open source)
 .openSource {
   background-color: rgba(3, 3, 3, 0.5);
+  .star{
+    color: #ffd700;
+    // margin-left: 10px;
+  }
 }
