--- a/styles/Footer.module.scss
+++ b/styles/Footer.module.scss
@@ -32,6 +32,10 @@ $purple: hsl(271, 46%, 53%);
   // all links in footer
   a.paragraphLinks {
     color: $purple;
+
+    &:hover {
+      color: hsl(350deg, 89%, 74%);
+    }
   }
 
   // social links in footer
