--- a/styles/Footer.module.scss
+++ b/styles/Footer.module.scss
@@ -14,6 +14,10 @@ $purple: hsl(271, 46%, 53%);
   a:active,
   a:visited {
     color: $footer-color;
+
+    &:hover {
+      color: hsl(350deg, 89%, 74%);
+    }
   }
 
   .sections {
