--- a/styles/NavBar.module.scss
+++ b/styles/NavBar.module.scss
@@ -44,6 +44,10 @@ $nav-height: 60px;
   .navLogo > a > p {
     font-weight: 700;
     margin-bottom: 0;
+
+    &:hover {
+      color: #fff;
+    }
   }
   // ? h4 nav
   // .navLogo > a > h4 {
