Change the color of footer links on hover from pink to grey

--- a/styles/Footer.module.scss
+++ b/styles/Footer.module.scss
@@ -16,7 +16,7 @@ $purple: hsl(271, 46%, 53%);
     color: $footer-color;
 
     &:hover {
-      color: hsl(350deg, 89%, 74%);
+      color: hsl(210, 28%, 86%);
     }
   }
 
