--- a/styles/CareersList.module.scss
+++ b/styles/CareersList.module.scss
@@ -24,6 +24,9 @@ $grey: hsl(0, 0%, 87%);
     border-radius: 10px;
     box-shadow: 0px 0px 1px 4px $card-bgc;
 
+    p {
+      font-size: 0.85rem;
+    }
     &:nth-child(1),
     &:nth-child(7) {
       border: 2px solid $pink;
