--- a/styles/SideBar.module.scss
+++ b/styles/SideBar.module.scss
@@ -30,8 +30,8 @@ $main-color: hsl(212, 28%, 86%);
       transform: rotate(-180deg);
     }
     &:hover {
-      background-color: #0F1621;
-      color: #D1DBE5;
+      background-color: #0f1621;
+      color: #d1dbe5;
       cursor: pointer;
     }
   }
